--- a/BigShow/Base.lproj/Main.storyboard
+++ b/BigShow/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--BSHomeC-->
         <scene sceneID="F4z-P2-2Bh">
             <objects>
-                <viewController title="BSHomeC" id="Wpe-mh-bSv" customClass="BSHomeC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeC" title="BSHomeC" id="Wpe-mh-bSv" customClass="BSHomeC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gNl-4w-zda">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,8 +33,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="2dt-hY-Bdb"/>
                     <connections>
-                        <outlet property="charcterImg" destination="Fu2-9O-Ps2" id="zmM-Ue-Jil"/>
-                        <outlet property="startBtn" destination="1HA-oa-XED" id="JH8-H6-qJN"/>
+                        <outlet property="charcterImg" destination="Fu2-9O-Ps2" id="VPw-8m-KlT"/>
+                        <outlet property="startBtn" destination="1HA-oa-XED" id="KSl-3F-G6J"/>
                         <segue destination="hhw-qW-8p0" kind="push" id="2ZP-8T-GAm"/>
                     </connections>
                 </viewController>
@@ -114,7 +114,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="128" placeholderIntrinsicHeight="128" image="head" id="Pzc-gS-dLH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="64"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" image="head.png" id="qb4-PZ-qki">
@@ -144,6 +144,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </imageView>
                                             </subviews>
+                                            <color key="backgroundColor" red="1" green="0.051146205229999998" blue="0.015877777629999999" alpha="1" colorSpace="calibratedRGB"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
@@ -167,7 +168,7 @@
                                                 </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.32549020649999999" green="0.84705889229999998" blue="0.78039222959999999" alpha="1" colorSpace="deviceRGB"/>
+                                        <color key="backgroundColor" red="0.95807211240000001" green="1" blue="0.97222416069999995" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -194,7 +195,7 @@
                                             </subviews>
                                             <color key="tintColor" red="0.85490202900000001" green="0.82745105029999999" blue="0.74509805439999999" alpha="1" colorSpace="deviceRGB"/>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.85490202900000001" green="0.82745105029999999" blue="0.74509805439999999" alpha="1" colorSpace="deviceRGB"/>
+                                        <color key="backgroundColor" red="0.10584442784946979" green="0.40204789602715041" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -210,7 +211,33 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zak-sL-fBv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-191" y="-522"/>
+            <point key="canvasLocation" x="-191" y="808"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="CRU-72-RhE">
+            <objects>
+                <tableViewController id="Ktb-5V-Rpd" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Esh-mS-FVg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="shv-2A-xt0">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="shv-2A-xt0" id="ef3-Xy-MmI">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ktb-5V-Rpd" id="3Hg-3H-Tpv"/>
+                            <outlet property="delegate" destination="Ktb-5V-Rpd" id="4D6-k0-707"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UTV-tO-wbD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="241" y="808"/>
         </scene>
     </scenes>
     <resources>
